# Atlas.WM

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  sbom.json
.github/workflows/: chaos-physics.yml  ci.yml  train-canary.yml
archive/: README.md
archive/encoders/: structured_encoder.py
archive/environments/: cruel_gridworld_fixed.py
archive/scripts/: atlas_dataset_legacy.py  debug_loss.py  train_phase1_fixed.py
checkpoints/: best_model.pt
configs/: base.yaml  experiment.yaml
configs/experiments/: v2_baseline.yaml  v3_hybrid_static.yaml  v3_variable_physics.yaml
data/raw/: actions.npy
docs/: Atlas-WM-v3-Architecture-Plan.md  MODEL_CARD.md  v2.0-COMPLETION-REPORT.md  v2.0-TECHNICAL-POSTMORTEM.md  v3.0-ROADMAP.md  v4.0-ROADMAP.md
scripts/: chaos_physics.py  evaluate.py  export_onnx.py  generate_data.py  generate_data_fixed.py  generate_diverse_data.py  migrate_pt_to_safetensors.py  oracle_friction_agent.py  probe_physics.py  run_pipeline.sh  sign_checkpoint.py  split_data.py  train.py  train_continuous.py  train_continuous_fixed.py  train_phase1.py  train_physics_belief.py
tests/: conftest.py  test_architecture.py  test_data_pipeline.py  test_determinism_canary.py  test_dynamics.py  test_encoder.py  test_entity_encoder.py  test_frame_stacking.py  test_identifiability.py  test_latent_probe.py  test_objectives.py  test_onnx_export.py  test_oracle_friction.py  test_partial_obs.py  test_physics.py  test_physics_belief.py  test_signing.py  test_training_canary.py  test_variable_physics.py
(+28 files in other folders)
